# JIIT-faculty-appraisal-system

./: .gitignore  CSEIT_faculty major project.csv  README.md  docker-compose.yml  vercel.json  verify_item12_2.py
appraisal_form_injestion/: urls.py  views.py
appraisal_form_injestion/services/: data_injestion_service.py
django-backend/: pyproject.toml  requirements.txt
django-backend/appraisal_form_injestion/: item_schema.json  utils.py
django-backend/appraisal_form_injestion/clients/: data_injestion_mongo_client.py
faculty_apprasial_system/: settings.py  wsgi.py
fastapi-backend/: pyproject.toml
fastapi-backend/app/: main.py
fastapi-backend/app/api/endpoints/: faculty.py  ingestion.py
fastapi-backend/app/core/: config.py
fastapi-backend/app/db/: mongo.py
fastapi-backend/app/services/: data_ingestion.py  faculty_data.py
fastapi-backend/app/utils/: calculations.py
jiit-portal/: package-lock.json  package.json
jiit-portal/app/: layout.tsx
jiit-portal/app/api/login/: route.ts
jiit-portal/app/api/seed/: route.ts
jiit-portal/app/appraisal/11-conference-events/: page.tsx
jiit-portal/app/appraisal/12-2-reading-material/: page.tsx
jiit-portal/app/appraisal/13-student-activities/: page.tsx
jiit-portal/app/appraisal/14-research-papers/: page.tsx
jiit-portal/app/appraisal/15-books-chapters/: page.tsx
jiit-portal/app/dashboard/: page.tsx
jiit-portal/app/login/: page.tsx
jiit-portal/components/: AppraisalLayout.tsx  FileUpload.tsx  SessionSync.tsx
jiit-portal/lib/: api.ts  constants.ts  dbConnect.ts  mockApi.ts  types.ts
(+6 files in other folders)
